chore: responsiveness an d id scanner integration

--- a/public/idscan.html
+++ b/public/idscan.html
@@ -200,7 +200,7 @@
         }
       }
       new window.GBG.Idscan.JourneyContainer({
-        backendUrl: "https://poc.idscan.cloud:443", //"http://localhost",//backendUrl: "http://localhost:80","https://prod.idscan.cloud:443",//
+        backendUrl: "https://poc.idscan.cloud:443", //"http://localhost",//backendUrl: "http://localhost:80","https://prod.idscan.cloud:443",//https://prod.idscan.cloud/IDscanApp/#/login,//https://poc.idscan.cloud:443
         container: "#roots",
         defaultInputProvider: defaultinput, //CAMERA
         tripleScanGuidancePage: true,
